see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

24-May-2013 Michael Babker
 + [#31004] Add JTwitter package to /libraries/joomla.  Thanks Diana Prajescu
 ^ [#30985] *New JLayout for edit_associations.  Thanks Jean-Marie Simonet
 #$ [#30994] Untranslated String.  Thanks Jean-Marie Simonet
 # [#30974] Fix offline overflow image.  Thanks Angelika Reisiger
 #$ [#31001] *Missing lang string for Protostar.  Thanks Jean-Marie Simonet
 #$ [#28081] Smart Search Results Page Displays Wrong Modules

24-May-2013 Jean-Marie Simonet
 # [#30689] jQuery not loaded in Isis error page. Thanks Dennis Hermatski
 # [#30945] Wrong error when folder creation not possible due to permissions. Thanks Phil Taylor
 # [#30367] wrong tooltip display at the joomla BE. Thanks Constantin Romankiewicz and Tobias Zulauf
 # [#30536] Allow plugins to add dynamically menu types to the list constructed from XML files. Thanks Beat
 ^ [#30497] Consolidate JHtml classes to CMS tree. Thanks Michael Babker

22-May-2013 Jean-Marie Simonet
 # [#30982] Fast links for item language associations management. Thanks Roberto Segura.
 # [#30956] No published field in Contacts Component
 $ Adding installation languages: Albanian sq-AL

22-May-2013 Elin Waring
 # [#30980] Undefined variable extension. Thanks Roberto Segura

21-May-2013 Jean-Marie Simonet
 # [PR #1173] Hotfix for failure on user. Thanks David Hurley.

19-May-2013 Michael Babker
 # [#30771] Extension Manager Check Database doesn't handle SQL queries with leading comments.  Thanks Mark Dexter
 #$ [#30867] More ':' than we need at Mass Mail.  Thanks Jean-Marie Simonet
 # [#30880] Article Count at beez3.  Thanks David Hurley